# maud_htmx_actix_template

./: Cargo.toml  README.md
public/: stylesheet.css
src/: main.rs
